added a new paragraph

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <img class="img1" src="/nature.jpg" alt=""> 
                 <p>Nature Photography</p>
             </div>
+            <p>a work well done</p>
         
         </section>
         
